--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -43,6 +43,15 @@ header {
   margin: 0 0 40px 0;
 }
 
+footer {
+  background: rgba(0, 0, 0, 0.1);
+  width: 100%;
+  border-top: 1px dashed #b5e853;
+  padding: 20px 0;
+  margin: 10px 0 5px 0;
+}
+
+
 header h1 {
   font-size: 30px;
   line-height: 1.5;
